// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GrantListEditorRow should render default mobile view 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1wa6ns3-MuiListItem-root"
    style="padding: 8px 0px 8px 0px;"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
      data-testid="grant-list-row-0"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-11 MuiGridLegacy-grid-md-9 css-1m59ukm-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container css-1ok6en4-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 css-1h9qchl-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
              >
                Agency name
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-3 css-1oeuqeq-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-6sa4r2-MuiTypography-root"
              >
                1234
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-4 css-1dt03kf-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-6sa4r2-MuiTypography-root"
              />
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-1 MuiGridLegacy-grid-md-3 css-yuldl1-MuiGridLegacy-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-8 css-gh8ekv-MuiGridLegacy-root"
            >
              <div
                aria-label="Move entry up the order"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move entry up the order"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="grant-list-move-up=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="KeyboardArrowUpIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                    />
                  </svg>
                </button>
              </div>
              <div
                aria-label="Move entry down the order"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move entry down the order"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="grant-list-move-down=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="KeyboardArrowDownIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-5mkhff-MuiGridLegacy-root"
            >
              <div
                aria-label="Remove this entry"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove this entry"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`GrantListEditorRow should render default view 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1wa6ns3-MuiListItem-root"
    style="padding: 8px 0px 8px 0px;"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
      data-testid="grant-list-row-0"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-11 MuiGridLegacy-grid-md-9 css-1m59ukm-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container css-1ok6en4-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 css-1h9qchl-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
              >
                Agency name
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-3 css-1oeuqeq-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
              >
                1234
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-4 css-1dt03kf-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
              />
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-1 MuiGridLegacy-grid-md-3 css-yuldl1-MuiGridLegacy-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-8 css-gh8ekv-MuiGridLegacy-root"
            >
              <div
                aria-label="Move entry up the order"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move entry up the order"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="grant-list-move-up=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="KeyboardArrowUpIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                    />
                  </svg>
                </button>
              </div>
              <div
                aria-label="Move entry down the order"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move entry down the order"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="grant-list-move-down=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="KeyboardArrowDownIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-4 css-1fvcyc-MuiGridLegacy-root"
            >
              <div
                aria-label="Remove this entry"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove this entry"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`GrantListEditorRow should render given grant data 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    aria-label="Select hint undefined"
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1wa6ns3-MuiListItem-root"
    style="padding: 8px 0px 8px 0px;"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
      data-testid="grant-list-row-0"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-11 MuiGridLegacy-grid-md-9 css-1m59ukm-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container css-1ok6en4-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 css-1h9qchl-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-tki2hk-MuiTypography-root"
              >
                testing
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-3 css-1oeuqeq-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-tki2hk-MuiTypography-root"
              >
                1234
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-4 css-1dt03kf-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-tki2hk-MuiTypography-root"
              >
                Government
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-1 MuiGridLegacy-grid-md-3 css-yuldl1-MuiGridLegacy-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-8 css-gh8ekv-MuiGridLegacy-root"
            >
              <div
                aria-label="Move up"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move up"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="grant-list-move-up=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1krx6eu-MuiSvgIcon-root"
                    data-testid="KeyboardArrowUpIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                    />
                  </svg>
                </button>
              </div>
              <div
                aria-label="Move down"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move down"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="grant-list-move-down=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1krx6eu-MuiSvgIcon-root"
                    data-testid="KeyboardArrowDownIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-4 css-1fvcyc-MuiGridLegacy-root"
            >
              <div
                aria-label="Delete hint"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Delete hint"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`GrantListEditorRow should render given locale 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    aria-label="Select hint testing"
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1wa6ns3-MuiListItem-root"
    style="padding: 8px 0px 8px 0px;"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
      data-testid="grant-list-row-0"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-11 MuiGridLegacy-grid-md-9 css-1m59ukm-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container css-1ok6en4-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 css-1h9qchl-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
              />
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-3 css-1oeuqeq-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
              >
                undefined
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-4 css-1dt03kf-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
              />
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-1 MuiGridLegacy-grid-md-3 css-yuldl1-MuiGridLegacy-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-8 css-gh8ekv-MuiGridLegacy-root"
            >
              <div
                aria-label="Move up"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move up"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="grant-list-move-up=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="KeyboardArrowUpIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                    />
                  </svg>
                </button>
              </div>
              <div
                aria-label="Move down"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move down"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="grant-list-move-down=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="KeyboardArrowDownIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-4 css-1fvcyc-MuiGridLegacy-root"
            >
              <div
                aria-label="Delete hint"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Delete hint"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`GrantListEditorRow should show confirmation box 1`] = `
<div
  aria-hidden="true"
>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1wa6ns3-MuiListItem-root"
    style="padding: 8px 0px 8px 0px;"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
      data-testid="grant-list-row-0"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-11 MuiGridLegacy-grid-md-9 css-1m59ukm-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container css-1ok6en4-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 css-1h9qchl-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
              >
                Agency name
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-3 css-1oeuqeq-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
              >
                1234
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-4 css-1dt03kf-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
              />
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-1 MuiGridLegacy-grid-md-3 css-yuldl1-MuiGridLegacy-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-8 css-gh8ekv-MuiGridLegacy-root"
            >
              <div
                aria-label="Move entry up the order"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move entry up the order"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="grant-list-move-up=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="KeyboardArrowUpIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                    />
                  </svg>
                </button>
              </div>
              <div
                aria-label="Move entry down the order"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move entry down the order"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="grant-list-move-down=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="KeyboardArrowDownIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-4 css-1fvcyc-MuiGridLegacy-root"
            >
              <div
                aria-label="Remove this entry"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove this entry"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;
